# MandelbrotCUDA

./: .gitignore  CMakeLists.txt
src/: CudaKernels.cu  CudaKernels.cuh  Mandelbrot.cpp  Mandelbrot.hpp  Renderer.cpp  Renderer.hpp  main.cpp
